# prefect_rj_civitas

./: .gitignore  .pre-commit-config.yaml  CLAUDE.MD  Dockerfile  README.md  dbt.md  pyproject.toml
.cursor/rules/: development-workflow.mdc
.github/actions/deploy-prefect-flows/: action.yaml
.github/scripts/: deploy_prefect_flows.py
.github/workflows/: build-and-push-root-image.yaml  deploy-prefect-flows-prod.yaml  deploy-prefect-flows-staging.yaml
pipelines/rj_civitas__cameras_civitas/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_civitas__cerco_digital/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_civitas__cetrio_radar_ocr/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_civitas__data_catalog/: flow.py  prefect.yaml
pipelines/rj_civitas__disque_denuncia/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_civitas__fogo_cruzado/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/rj_civitas__palver/: Dockerfile  cache.py  flow.py  prefect.yaml  pyproject.toml  schemas.py  tasks.py  utils.py
pipelines/rj_civitas__run_dbt/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  utils.py
pipelines/rj_iplanrio__data_catalog/: Dockerfile  bigquery.sql  pyproject.toml
src/prefect_rj_civitas/: __init__.py  config.py  env.py
src/prefect_rj_civitas/tasks/: flow_control.py  prefect_deployment.py
templates/: cookiecutter.json
templates/rj_{{ cookiecutter.secretaria }}__{{ cookiecutter.pipeline }}/: Dockerfile  flow.py  prefect.yaml  pyproject.toml
