[project]
name = "rj_civitas__fogo_cruzado"
version = "0.1.0"
description = "Pipeline fogo_cruzado da secretaria civitas"
dependencies = [
    "prefect_rj_civitas",
    "aiohttp>=3.9.0",
    "google-cloud-bigquery>=3.0.0",
    "pandas>=2.2.0",
    "pytz",
    "redis-pal>=1.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[tool.uv.sources]
prefect_rj_civitas = { workspace = true }
