[project]
name = "rj_civitas__data_catalog"
version = "0.1.0"
description = "Pipeline data_catalog da CIVITAS Rio"
dependencies = [
    "prefect_rj_civitas",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-storage>=2.10.0",
    "polars>=1.35.2",
]
[tool.uv.sources]
prefect_rj_civitas = { workspace = true }
